<resources>
    <string name="app_name">srmmobile</string>
    <string name="server_client_id">527371133243-9tr4gvi7vic5g3b3p5fr10dtrgs4kvgo.apps.googleusercontent.com</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="hint_edittext_signup">Masukkan NIM atau Nomor Kepegawaian</string>
    <string name="SRM">SRM</string>
    <string name="suffix">.apps.googleusercontent.com</string>
    <string name="provider">google</string>
    <string name="message">Invalid server client ID in strings.xml, must end with </string>
    <string name="gagal">gagal</string>
    <string name="berhasil">berhasil</string>
    <string name="radioSatu">Mahasiswa</string>
    <string name="radioDua">Dosen</string>
    <string name="radioTiga">Staff</string>
    <string name="mahasiswa">Mahasiswa</string>
    <string name="drawer_open">Buka</string>
    <string name="drawer_close">Tutup</string>
    <string-array name="spinnerItems">
        <item>5</item>
        <item>10</item>
        <item>20</item>
        <item>40</item>
        <item>80</item>

    </string-array>

    <string name="user_name">Nama </string>
    <string name="user_email">Email </string>
    <string name="user_role">Status</string>
    <string name="user_nim">Nomor Induk</string>
    <string name="user_jenisKelamin">Gender</string>

    <string name="judul_kelas">Administrasi Sistem</string>

    <string name="judul_pengumuman"> Tugas Adsis Minggu 11 </string>
    <string name="tanggal_pengumuman"> 12 September 2020 </string>
    <string name="title_periode">Periode</string>
    <string name="title_pengajar">Pengajar</string>
    <string name="title_waktu">Waktu</string>
    <string name="title_jumlah_pengumuman"> Jumlah Pengumuman : </string>
    <string name="default_spinner_pengumuman"> 10 </string>
    <string name="judul_pengumuan">Judul Pengumuan</string>
    <string name="isi_pengumuman">ISI </string>
    <string name="namadosen">namadosen</string>
    <string name="deskripsi_kegiatan">Deskripsi kegiatan</string>
    <string name="date_pattern">yyyy-MM-dd</string>
    <string name="toast_sukses_google_calender">Sinkronisasi Google Calender Berhasil</string>
    <string name="titlebar_kalender">Kalender</string>
    <string name="titlebar_daftarkelas">Daftar Kelas</string>
    <string name="error_koneksi">terdapat masalah koneksi \ncek koneksi dan coba lagi</string>
    <string name="error_komunikasi_server">fitur sedang diperbaiki</string>
    <string name="titlebar_update_perkuliahan">Update perkuliahan</string>
    <string name="event_kalendar_fragment_empty">Tidak ada kegiatan</string>
    <string name="button_reconnect">Coba Lagi</string>
    <string name="update_perkuliahan_empty">Tidak ada Pengumuman atau Kegiatan Kelas untuk minggu depan</string>
    <string name="title_text_update_perkuliahan">Pengumuman Dan Event untuk 1 Minggu Ke Depan</string>
    <string name="daftar_kelas_empty">Tidak ada Kelas</string>
    <string name="button_sync_google_calendar_profile">SYNC GOOGLE CALENDAR</string>
    <string name="titlebar_profile">Profil</string>
    <string name="pengumuman_kelas_empty">Tidak ada Pengumuman Kelas</string>
    <string name="list_kegiatan_empty">Tidak ada Kegiatan Kelas</string>
    <string name="perserta_kelas_empty">Peserta Kelas Belum terigistrasi</string>
    <string name="judul_peserta_mata_kuliah">Peserta matakuliah :</string>
    <string name="button_lihat_kegiatan">Lihat Kegiatan</string>
    <string name="button_lihat_pengumuman">Lihat Pengumuman</string>
    <string name="nama_matkul_detail_kelas">Nama Makul</string>

</resources>