<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="id.ukdw.srmmobile.ui.detailkelas.DetailKelasActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="detailKelasViewModel"
            type="id.ukdw.srmmobile.ui.detailkelas.DetailKelasViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/detailmatakuliah"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#2d2d2d"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.45"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtNamaMakul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/nama_matkul_detail_kelas"
                android:textColor="#FFF"
                android:textSize="20dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.20"
                    android:text="@string/title_pengajar"
                    android:textColor="#FFF"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtPengajar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.65"
                    android:text=":"
                    android:textColor="#FFF"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/imgSchedule"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    android:layout_weight="0.15"
                    android:src="@mipmap/ic_calendar" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.20"
                    android:text="@string/title_waktu"
                    android:textColor="#FFF"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtWaktu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.80"
                    android:text=":"
                    android:textColor="#FFF"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.20"
                    android:text="@string/title_periode"
                    android:textColor="#FFF"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtPeriode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.80"
                    android:text=":"
                    android:textColor="#FFF"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btPengumumanDetailKelas"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:text="@string/button_lihat_pengumuman" />

                <Button
                    android:id="@+id/btKegiatanDetailKelas"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:text="@string/button_lihat_kegiatan" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/judul_peserta_mata_kuliah"
                android:textColor="@color/colorWhite"
                android:textSize="20dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerPesertaKelas"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.65" />

            <TextView
                android:id="@+id/txtPesertaEmpty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perserta_kelas_empty"
                android:textColor="@color/colorWhite"
                android:visibility="gone" />


            <FrameLayout
                android:id="@+id/progressBarHolder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.4"
                android:animateLayoutChanges="true"
                android:background="#000000"
                android:visibility="gone">

                <ProgressBar
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:indeterminate="true" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/containerError"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:layout_weight="0.5"
            android:visibility="gone"
            android:background="#2d2d2d"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtDetailKelasError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/colorWhite"/>

            <Button
                android:id="@+id/reconnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_reconnect"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:textColor="@color/colorWhite"
                android:background="@color/colorPrimary"/>

        </LinearLayout>

    </LinearLayout>

</layout>
