<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View" />

        <variable
            name="pengumumanViewModel"
            type="id.ukdw.srmmobile.ui.pengumuman.PengumumanViewModel"/>
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#2D2D2D"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_marginTop="20dp"
            android:paddingTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_text_update_perkuliahan"
            android:gravity="center"
            android:textColor="#FFF"
            android:textSize="20dp"
            android:textStyle="bold" />


    </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:paddingTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recyclerPengumuman"/>

        <TextView
            android:id="@+id/txtUpdatePerkuliahanEmpty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_perkuliahan_empty"
            android:textColor="@color/colorWhite"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/containerError"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:background="#2D2D2D"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/txtUpdatePerkuliahanError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="25sp"
                android:textColor="@color/colorWhite"/>

            <Button
                android:id="@+id/reconnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_reconnect"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="10dp"
                android:textColor="@color/colorWhite"
                android:background="@color/colorPrimary"/>

        </LinearLayout>


    </LinearLayout>


</layout>
