<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="id.ukdw.srmmobile.ui.kegiatankelas.detailkegiatankelas.DetailKegiatanKelasActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="detailKegiatanKelasViewModel"
            type="id.ukdw.srmmobile.ui.kegiatankelas.detailkegiatankelas.DetailKegiatanKelasViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#2d2d2d"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="40dp"
            android:clipToPadding="false"
            android:paddingBottom="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true">

                <Button
                    android:id="@+id/deteleKegiatan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:layout_marginEnd="16dp"
                    android:background="#BC083B"
                    android:padding="15dp"
                    android:text="DELETE"
                    android:textSize="16dp"
                    android:textColor="@color/colorWhite"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <EditText
                    android:id="@+id/updatejudulkegiatan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="28dp"
                    android:layout_marginEnd="12dp"
                    android:hint="@string/judul_pengumuan"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="text"
                    android:textColor="@color/colorWhite"
                    android:background="@color/black_effective"
                    android:textColorHint="#AFAFAF"
                    android:textSize="26sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/deteleKegiatan"
                    app:layout_constraintVertical_bias="0.0"
                    tools:layout_editor_absoluteX="8dp" />

                <EditText
                    android:id="@+id/updateisikegiatan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="15dp"
                    android:gravity="top"
                    android:hint="@string/deskripsi_kegiatan"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="textImeMultiLine"
                    android:minHeight="100dp"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="#AFAFAF"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/updatejudulkegiatan"
                    app:layout_constraintVertical_bias="0.0"
                    tools:layout_editor_absoluteX="12dp" />

                <TextView
                    android:id="@+id/kegiatanKelasTanggalInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:text="@string/tanggal_pengumuman"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/updateisikegiatan"
                    app:layout_constraintVertical_bias="0.008"
                    tools:layout_editor_absoluteX="0dp" />

                <TextView
                    android:id="@+id/kegiatanKelasNamaDosen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:text="@string/namadosen"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/kegiatanKelasTanggalInput"
                    app:layout_constraintVertical_bias="0.12"
                    tools:layout_editor_absoluteX="0dp" />

                <Button
                    android:id="@+id/saveKegiatan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:layout_marginEnd="16dp"
                    android:background="@color/colorPrimary"
                    android:padding="15dp"
                    android:text="SAVE"
                    android:visibility="gone"
                    android:textSize="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/kegiatanKelasNamaDosen" />

                <Button
                    android:id="@+id/editKegiatan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:layout_marginEnd="16dp"
                    android:background="@color/colorPrimary"
                    android:padding="15dp"
                    android:text="EDIT"
                    android:textSize="16dp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/kegiatanKelasNamaDosen" />

                <Button
                    android:id="@+id/updateKegiatan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:layout_marginEnd="16dp"
                    android:background="@color/colorPrimary"
                    android:padding="15dp"
                    android:text="UPDATE"
                    android:textSize="16dp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/kegiatanKelasNamaDosen" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
